03 Commit - Redacción de README.md

--- a/aaaa-child/style.css
+++ b/aaaa-child/style.css
@@ -11,6 +11,6 @@
  Tags:         light, dark, two-columns, responsive-layout, your tags
  Text Domain:  theme-parent-child
 */
+
 /* =Aquí empieza la personalización de tu tema
--------------------------------
-------------------------------- */
+*/
