--- a/aaaa-child/style.css
+++ b/aaaa-child/style.css
@@ -1,15 +1,16 @@
 /*
- Theme Name:   blossom-travel Child
- Theme URI:    https://www.themeisle.com/
+ Theme Name:   theme-parent Child
+ Theme URI:    https://theme-parent.com/
  Description:  This is a custom child theme I have created.
- Author:       ThemeIsle
- URI:          https://www.themeisle.com/
- Template:     blossom-travel    
+ Author:       Your name
+ URI:          https://yoursite.com/
+ Template:     theme-parent
  Version:      1.0.0
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
- Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
- Text Domain:  twenty-fourteen-child
+ Tags:         light, dark, two-columns, responsive-layout, your tags
+ Text Domain:  theme-parent-child
 */
 /* =Aquí empieza la personalización de tu tema
--------------------------------------------------------------- */
+-------------------------------
+------------------------------- */
